# verified-first

./: .gitignore  README.md  config.html  config.js  eslint.config.js  eslint.config.mjs  globals.js  package-lock.json  package.json  panel.css  panel.html  panel.js  theme.css  theme.js  vite.config.js
.github/: dependabot.yaml
.github/workflows/: dependabot-auto-merge-actions.yml  dependabot-auto-merge-npm.yml  dependabot-auto-merge-python.yml  docker-build.yml  run-eslint.yml  run-frontend-tests.yml  run-tests.yml  trivy.yml  zipfile.build.yml
ebs/: .dockerignore  Dockerfile  MANIFEST.in  env.example  pyproject.toml  requirements.txt  tox.ini
ebs/scripts/: add_first.py  backfill_user_ids.py  migrate_user_ids.py  parse_firsts.py  reassign_user.py  reset_twitch_config.py  setup_test_env.py  update_config.py
ebs/tests/: conftest.py  defaults.py  test_auth.py  test_config.py  test_errors.py  test_main.py  test_scripts.py  test_twitch.py  test_verify.py
ebs/verifiedfirst/: __init__.py  __main__.py  app.db.bak  app_init.py  config.py  database.py  extensions.py  init_db.py  twitch.py  verify.py  web.py
ebs/verifiedfirst/auth/: routes.py
ebs/verifiedfirst/errors/: handlers.py
ebs/verifiedfirst/main/: routes.py
ebs/verifiedfirst/models/: broadcasters.py  firsts.py  users.py
ebs/verifiedfirst/templates/: auth.html
src/: theme.css
src/config/: Config.jsx  Config.test.jsx  main.jsx
src/panel/: Panel.jsx  Panel.test.jsx  main.jsx
src/shared/: api.js  api.test.js  constants.js
src/test/: setup.js
