
[project]
name = "verifiedfirst"
description = "Backend for Verified First twitch extension"
version = "0.2.3"
authors = [
    { name = "Jaedolph - Lord of Games" }
]
dependencies = [
    "flask==2.*",
    "Flask-SQLAlchemy==3.*",
    "flask-cors==4.*",
    "requests==2.*",
    "pyjwt[crypto]==2.*",
    "psycopg2-binary==2.*",
    "gunicorn==21.*",
]

[project.scripts]
verifiedfirst = "verifiedfirst.__main__:main"
verifiedfirst-initdb = "verifiedfirst.init_db:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["verifiedfirst*"]

[tool.black]
line-length = 100

[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100

[tool.pylint]
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.docstyle"]
max-args = 10
max-attributes = 10
generated-members = "codes.*"
disable = ["fixme"]
