
[project]
name = "verifiedfirst"
description = "Backend for Verified First twitch extension"
version = "0.2.4"
authors = [
    { name = "Jaedolph - Lord of Games" }
]
dependencies = [
    "flask==3.*",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=2.5.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt[crypto]>=2.10.1",
    "requests>=2.32.5",
]
requires-python = "~= 3.13.0"

[project.scripts]
verifiedfirst = "verifiedfirst.__main__:main"
verifiedfirst-initdb = "verifiedfirst.init_db:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["verifiedfirst*"]

[tool.black]
line-length = 100

[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100

[tool.pylint]
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.docstyle"]
max-args = 10
max-attributes = 10
generated-members = "codes.*"
disable = ["fixme"]
